--- a/recetas.html
+++ b/recetas.html
@@ -42,7 +42,7 @@
 				<a href="recetas dulces.html">
 					
 					<article>
-						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadadulces.svg" width="320" height="320" alt="imgresto"/> 
+						<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadadulces.svg" width="320" height="320" alt="imgresto"/> 
 						<h3 class="letrasnaranjas">Dulces</h3>
 					</article>
 				</a>
@@ -50,7 +50,7 @@
 				<a href="recetas saladas.html">
 					
 					<div>
-						<img class="selecciondeimagenes" src="img/portadas circulares grandes/portadasaladas.svg" width="320" height="320" alt="imgreceta"/>
+						<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadasaladas.svg" width="320" height="320" alt="imgreceta"/>
 						<h3 class="letrasnaranjas">Saladas</h3>
 					</div>
 				</a>
@@ -68,9 +68,9 @@
 		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
+				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
+				<a href="https://www.instagram.com/" ><img src="img/redesparafooter/instagram.png" width="29" height="29" alt="iconoinsta"/></a> 
 			</div>
 		</section>
 		
