--- a/recetasdulces.html
+++ b/recetasdulces.html
@@ -40,22 +40,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column"><a href="tarta de limon.html">
-				<img class="selecciondeimagenes" src="img/recetas dulces/tartalimon.svg"  width="200" height="200" alt="tartalimon"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/tartalimon.svg"  width="200" height="200" alt="tartalimon"/>
 				<h6>Tarta de limón</h6></a>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/brownies.svg"  width="200" height="200" alt="brownies"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/brownies.svg"  width="200" height="200" alt="brownies"/>
 				<h6>Brownies</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/budin.svg"  width="200" height="200" alt="budin"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/budin.svg" width="200" height="200" alt="budin"/>
 				<h6>Budín</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/cheesecake.svg"  width="200" height="200" alt="cheesecake"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/cheesecake.svg"  width="200" height="200" alt="cheesecake"/>
 				<h6>Cheesecake</h6>
 			</div>
 			
@@ -64,22 +64,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/cookies.svg"  width="200" height="200" alt="cookies"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/cookies.svg" width="200" height="200" alt="cookies"/>
 				<h6>Cookies</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/pancakes.svg"  width="200" height="200" alt="pancakes"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/pancakes.svg" width="200" height="200" alt="pancakes"/>
 				<h6>Pancakes</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/alfajores.svg"  width="200" height="200" alt="alfajor"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/alfajores.svg" width="200" height="200" alt="alfajor"/>
 				<h6>Alfajores</h6>	 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas dulces/tiramisu.svg"  width="200" height="200" alt="tiramisu"/>
+				<img class="selecciondeimagenes" src="img/recetasdulces/tiramisu.svg" width="200" height="200" alt="tiramisu"/>
 				<h6>Tiramisú</h6>
 			</div>
 			
@@ -96,9 +96,9 @@
 		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
+				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
+				<a href="https://www.instagram.com/" ><img src="img/redesparafooter/instagram.png" width="29" height="29" alt="iconoinsta"/></a> 
 			</div>
 		</section>
 		
