--- a/recetassaladas.html
+++ b/recetassaladas.html
@@ -40,23 +40,23 @@
 			
 			<div class="cards flex-column">
 				<a href="pizza.html">
-				<img class="selecciondeimagenes" src="img/recetas saladas/pizza-circular.svg"  width="200" height="200" alt="pizza"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/pizza-circular.svg" width="200" height="200" alt="pizza"/>
 				<h6> Pizza</h6>
 				</a>
 			</div> 
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/ñoquis.svg"  width="200" height="200" alt="ñoquis"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/ñoquis.svg" width="200" height="200" alt="ñoquis"/>
 				<h6>&Ntilde;oquis</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/sandwich.svg"  width="200" height="200" alt="sandwich"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/sandwich.svg" width="200" height="200" alt="sandwich"/>
 				<h6>Sandwich</h6>
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/tacos.svg"  width="200" height="200" alt="tacos"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/tacos.svg" width="200" height="200" alt="tacos"/>
 				<h6>Tacos</h6>  
 			</div>
 			
@@ -65,22 +65,22 @@
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/hamburguesa.png" width="200" height="200" alt="hamburguesa"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/hamburguesa.svg" width="200" height="200" alt="hamburguesa"/>
 				<h6>Hamburguesa</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/croquetas.png" width="200" height="200" alt="croquetas"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/croquetas.svg" width="200" height="200" alt="croquetas"/>
 				<h6>Croquetas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/empanadas.png" width="200" height="200" alt="empanadas"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/empanadas.svg" width="200" height="200" alt="empanadas"/>
 				<h6 class="recetasdulcestitulos">Empanadas</h6> 
 			</div>
 			
 			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/recetas saladas/lasagna.png" width="200" height="200" alt="lasagna"/>
+				<img class="selecciondeimagenes" src="img/recetassaladas/lasagna.svg" width="200" height="200" alt="lasagna"/>
 				<h6>Lasagna</h6> 
 			</div>
 			
@@ -97,9 +97,9 @@
 		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
+				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
+				<a href="https://www.instagram.com/" ><img src="img/redesparafooter/instagram.png" width="29" height="29" alt="iconoinsta"/></a> 
 			</div>
 		</section>
 		
