--- a/graciasporunirte.html
+++ b/graciasporunirte.html
@@ -61,14 +61,14 @@
 			
 				<a href="restaurantes.html">
 				<article>
-					<img src="img/restaurantes/osanegra.png" width="320" height="320" alt="restaurante"/>
+					<img src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="restaurante"/>
 					<h3 class="letrasblancas">Restaurantes</h3>
 				</article>
 				</a>
 			
 				<a href="recetas.html">
 				<div>
-					<img src="img/portadas circulares grandes/portadarecetas.png" width="320" height="320" alt="imgreceta"/>
+					<img src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="imgreceta"/>
 					<h3 id="letrasnaranjas">Recetas</h3>
 				</div>
 				</a>
@@ -87,9 +87,9 @@
 		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
+				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
+				<a href="https://www.instagram.com/" ><img src="img/redesparafooter/instagram.png" width="29" height="29" alt="iconoinsta"/></a> 
 			</div>
 		</section>
 		
