--- a/tartadelimon.html
+++ b/tartadelimon.html
@@ -204,9 +204,9 @@
 		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
+				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
+				<a href="https://www.instagram.com/" ><img src="img/redesparafooter/instagram.png" width="29" height="29" alt="iconoinsta"/></a> 
 			</div>
 		</section>
 		
