--- a/foro.html
+++ b/foro.html
@@ -5,7 +5,7 @@
 <title>Foro</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Inika&family=Open+Sans&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Inika&family=Open+Sans:wght@300;400;500&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon .ico">
 </head>
 
