--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Iniciar sesión</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Inika&family=Open+Sans:wght@300;400;500&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon .ico">
 </head>
 
