--- a/restaurantes.html
+++ b/restaurantes.html
@@ -5,16 +5,16 @@
 <title>TACC FREE | Restaurantes</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<meta name="viewport" content="width=device-width, inicial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Open+Sans:wght@400;700&family=Original+Surfer&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Inika&family=Open+Sans:wght@300;400;500&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon .ico">
 </head>
 
 <body>
 	
-<header>
+	<header>
 		
 		<section class="logobotonera">
-			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="graciasporunirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
 		<nav class="botoneraheader">
@@ -22,12 +22,12 @@
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a>
 					<ul class="opciones">
-						<li class="submenu"><a href="recetas dulces.html">Dulces</a></li>
-						<li class="submenu"><a href="recetas saladas.html">Saladas</a></li>
+						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
-				<li><a href="gracias por unirte.html">Mi perfil</a></li>
+				<li><a href="graciasporunirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
 		
