cambios en imagenes

--- a/pizza.html
+++ b/pizza.html
@@ -35,7 +35,7 @@
 	
 	<main class="flex-column">
 		
-		<img class="imgportada" src="img/portada pizza.jpg" width="1080" height="400" alt="portadapizza"/>
+		<img class="imgportada" src="img/fotopizza.jpg" width="1080" height="400" alt="portadapizza"/>
 
 		<section class="flex-row">
 			
