--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<footer>
 		
 		<section>
-			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
+			<img src="img/logoainicio2.svg" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
