--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -35,7 +35,7 @@
 	
 	<main class="flex-column">
 		
-		<img class="imgportada" src="img/portada sintaxis.jpg" width="1080" height="400" alt="fotosintaxis"/>
+		<img class="imgportada" src="img/portadasintaxis2.jpg" width="1080" height="400" alt="fotosintaxis"/>
 		
 		<section class="flex-row">
 			
