--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
 			</ul>
 		</nav>
 		
+		<div class="botoneramobile">
+				<ul>
+					<li><a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a></li>
+					<li><img src="img/menu-hamburgues.svg" alt="menuhamburguesa"/></li>
+					<ul class="opciones2">
+						<li class="submenu2"><a href="gracias por unirte.html">Mi perfil</a></li>
+						<li class="submenu2"><a href="restaurantes.html">Restaurantes</a></li>
+						<li class="submenu2"><a href="recetasdulces.html">Recetas Dulces</a></li>
+						<li class="submenu2"><a href="recetassaladas.html">Recetas Saladas</a></li>
+						<li class="submenu2"><a href="foro.html">Foro</a></li>
+					</ul>
+				</ul>
+			</div>
+		
 	</header>
 	
 	<main class="maincolumnas flex-column">
@@ -58,8 +72,8 @@
 						<img class="flecha" src="img/flechas.png" width="44" height="45" alt="flecha"/>
 					</div>
 				
-					<div>
-						<h2 class="sabes">¿Sabes lo que es  la contaminación cruzada?</h2>
+					<div class="sabes">
+						<h2>¿Sabes lo que es  la contaminación cruzada?</h2>
 						<p class="textosabesloquees">La celiaquía es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada. Es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensillos para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 					</div>
 				
