--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -29,7 +29,7 @@
 			</div>
 			
 			<div>
-				<a href="gracias por unirte.html"><input class="Boton-iniciarsesion" type="submit" value="Iniciar sesión"></a>
+				<a href="gracias por unirte.html"><input class="boton-iniciarsesion-registrarse" type="submit" value="Iniciar sesión"></a>
 			</div>
 			
 		</section>
