--- a/registrarse.html
+++ b/registrarse.html
@@ -32,7 +32,7 @@
 				
 				
 				<div>
-					<a href="gracias por unirte.html"><input class="Boton-registrarse" type="submit" value="Registrate"></a>
+					<a href="gracias por unirte.html"><input class="boton-iniciarsesion-registrarse" type="submit" value="Registrate"></a>
 				</div>
 			
 		</section>
