--- a/graciasporunirte.html
+++ b/graciasporunirte.html
@@ -61,7 +61,7 @@
 			
 				<a href="restaurantes.html">
 				<article>
-					<img src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="restaurante"/>
+					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="restaurante"/>
 					<h3 class="letrasblancas">Restaurantes</h3>
 				</article>
 				</a>
