--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 			
 				<a href="restaurantes.html">
 				<article>
-					<img src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="portadaresto"/>
+					<img class="selecciondeimagenesnaranja" src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="portadaresto"/>
 					<h3 class="letrasblancas">Restaurantes</h3>
 				</article>
 				</a>
 			
 				<a href="recetas.html">
 				<div>
-					<img src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="imgreceta"/>
+					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="imgreceta"/>
 					<h3 class="letrasnaranjas">Recetas</h3>
 				</div>
 				</a>
