--- a/restaurantes.html
+++ b/restaurantes.html
@@ -37,7 +37,9 @@
 	
 		<h3 class="titulorecetas">Restaurantes</h3>
 			
-		<section class="flex-row sectioncards">
+		<section class="contenedorcards">
+			
+			<section class="flex-row sectioncards">
 			
 			<a href="sintaxispalermo.html">
 				<div class="cards flex-column">
@@ -51,6 +53,10 @@
 				<h6 class="recetasdulcestitulos">Campo Bravo</h6>
 			</div>
 			
+		</section>
+			
+			<section class="flex-row sectioncards">
+			
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/restaurantes/eggs_gree.svg"  width="200" height="200" alt="eggs"/>
 				<h6 class="recetasdulcestitulos">Eggs &amp; Greens</h6>
@@ -63,9 +69,13 @@
 			
 		</section>
 			
-		<section class="flex-row sectioncards">
+		</section>
+		
+		<section class="contenedorcards">
 			
-			<div class="cards flex-column">
+			<section class="flex-row sectioncards">
+			
+				<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/restaurantes/launion.svg" width="200" height="200" alt="launion"/>
 				<h6 class="recetasdulcestitulos">La uni&oacute;n</h6>	 
 			</div>
@@ -74,17 +84,17 @@
 				<img class="selecciondeimagenes" src="img/restaurantes/letitv.svg"  width="200" height="200" alt="letitv"/>
 				<h6 class="recetasdulcestitulos">Let it V</h6>
 			</div>
+				
+			</section>
 			
-			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/restaurantes/osanegra.svg"  width="200" height="200" alt="osanegra"/>
-				<h6 class="recetasdulcestitulos">Osa Negra</h6>
-			</div>
+	
+		
+			<section class="flex-row sectioncards">
 			
-			<div class="cards flex-column">
-				<img class="selecciondeimagenes" src="img/restaurantes/whoopies.svg"  width="200" height="200" alt=""/>
-				<h6 class="recetasdulcestitulos">Whoopies</h6>
-			</div>
+				<div class="cards flex-column"><img class="selecciondeimagenes" src="img/restaurantes/osanegra.svg"  width="200" height="200" alt="osanegra"/><h6 class="recetasdulcestitulos">Osa Negra</h6></div>
 			
+				<div class="cards flex-column"><img class="selecciondeimagenes" src="img/restaurantes/whoopies.svg"  width="200" height="200" alt=""/><h6 class="recetasdulcestitulos">Whoopies</h6></div>
+				</section>
 		</section>
 		
 	</main>
