--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -84,22 +84,22 @@
 				<div class="container">
 					<ul class="slider">
 						<li id="slide1">
-							<img src="img/carrusel/comida1.jpg" alt= "imagen1carrusel"/>
+							<img src="img/carrusel/comida1.jpg" alt= "ravioles"/>
 						</li>
 						<li id="slide2">
-							<img src="img/carrusel/comida2.jpg" alt= "imagen2carrusel"/>
+							<img src="img/carrusel/comida2.jpg" alt= "hamburguesa"/>
 						</li>
 						<li id="slide3">
-							<img src="img/carrusel/comida3.jpg" alt= "imagen3carrusel"/>
+							<img src="img/carrusel/comida3.jpg" alt= "carne"/>
 						</li>
 						<li id="slide4">
-							<img src="img/carrusel/comida4.jpg" alt= "imagen4carrusel"/>
+							<img src="img/carrusel/comida4.jpg" alt= "ñoquis"/>
 						</li>
 						<li id="slide5">
-							<img src="img/carrusel/comida5.jpg" alt= "imagen5carrusel"/>
+							<img src="img/carrusel/comida5.jpg" alt= "merienda"/>
 						</li>
 						<li id="slide6">
-							<img src="img/carrusel/comida6.jpg" alt= "imagen6carrusel"/>
+							<img src="img/carrusel/comida6.jpg" alt= "torta"/>
 						</li>
 						
 						
