ordene la carpeta de imagenes y volvi a linkear los htmls

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header>
 		
 		<section class="logobotonera">
-			<a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="gracias por unirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
 		<nav class="botoneraheader">
@@ -22,8 +22,8 @@
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a>
 					<ul class="opciones">
-						<li class="submenu"><a href="recetas dulces.html">Dulces</a></li>
-						<li class="submenu"><a href="recetas saladas.html">Saladas</a></li>
+						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
 					</ul>
 				</li>
 				<li><a href="foro.html">Foro</a></li>
@@ -33,7 +33,7 @@
 		
 		<div class="botoneramobile">
 				<ul>
-					<li><a href="gracias por unirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a></li>
+					<li><a href="gracias por unirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a></li>
 					<li><img src="img/menu-hamburgues.svg" alt="menuhamburguesa"/></li>
 					<ul class="opciones2">
 						<li class="submenu2"><a href="gracias por unirte.html">Mi perfil</a></li>
@@ -61,7 +61,7 @@
 			
 					<nav class="registro flex-row">
 						<ul class="boton">
-							<li><a href="iniciar-sesion.html">Iniciar sesión</a></li>
+							<li><a href="iniciarsesion.html">Iniciar sesión</a></li>
 						</ul>
 						<ul class="boton">
 							<li><a href="registrarse.html">Registrarse</a></li>
@@ -85,14 +85,14 @@
 			
 				<a href="restaurantes.html">
 				<article>
-					<img class="selecciondeimagenesnaranja" src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="portadaresto"/>
+					<img class="selecciondeimagenesnaranja" src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="restaurante"/>
 					<h3 class="letrasblancas">Restaurantes</h3>
 				</article>
 				</a>
 			
 				<a href="recetas.html">
 				<div>
-					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="imgreceta"/>
+					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="receta"/>
 					<h3 class="letrasnaranjas">Recetas</h3>
 				</div>
 				</a>
@@ -104,7 +104,7 @@
 	<footer>
 		
 		<section>
-			<img src="img/logoainicio2.svg" width="61" height="36" alt="logo"/>
+			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
