--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -25,11 +25,11 @@
 			</form>
 			
 			<div>
-				<input class="olvidaste-contraseña" type="submit" value="Olvidé mi contraseña">
+				<input class="olvidastecontrasenia" type="submit" value="Olvidé mi contraseña">
 			</div>
 			
 			<div>
-				<a href="gracias por unirte.html"><input class="boton-iniciarsesion-registrarse" type="submit" value="Iniciar sesión"></a>
+				<a href="graciasporunirte.html"><input class="boton-iniciarsesion-registrarse" type="submit" value="Iniciar sesión"></a>
 			</div>
 			
 		</section>
