--- a/recetas.html
+++ b/recetas.html
@@ -13,7 +13,7 @@
 	<header>
 		
 		<section class="logobotonera">
-			<a href="graciasporunirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
 		<nav class="botoneraheader">
@@ -42,7 +42,7 @@
 				<a href="recetasdulces.html">
 					
 					<article>
-						<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadadulces.svg" width="320" height="320" alt="imgresto"/> 
+						<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadadulces.svg" width="320" height="320" alt="restaurante"/> 
 						<h3 class="letrasnaranjas">Dulces</h3>
 					</article>
 				</a>
@@ -50,7 +50,7 @@
 				<a href="recetassaladas.html">
 					
 					<div>
-						<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadasaladas.svg" width="320" height="320" alt="imgreceta"/>
+						<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadasaladas.svg" width="320" height="320" alt="receta"/>
 						<h3 class="letrasnaranjas">Saladas</h3>
 					</div>
 				</a>
@@ -61,7 +61,7 @@
 
 	<footer>
 		<section>
-			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
+			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
