--- a/restaurantes.html
+++ b/restaurantes.html
@@ -14,7 +14,7 @@
 	<header>
 		
 		<section class="logobotonera">
-			<a href="graciasporunirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
 		<nav class="botoneraheader">
@@ -101,16 +101,16 @@
 	
 	<footer>
 		<section>
-			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
+			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
 		<section>
 			<h4>SEGUINOS EN </h4>
 			<div class="imgredes">
-				<img src="img/redes para footer/mail.png" width="29" height="29" alt="iconomail"/>
-				<img src="img/redes para footer/facebook.png" width="29" height="29" alt="iconofb"/>
-				<img src="img/redes para footer/instagram.png" width="29" height="29" alt="iconoinsta"/> 
+				<img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/>
+				<img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/>
+				<img src="img/redesparafooter/instagram.png" width="29" height="29" alt="iconoinsta"/> 
 			</div>
 		</section>
 		
