--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -14,7 +14,7 @@
 	<header>
 		
 		<section class="logobotonera">
-			<a href="graciasporunirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
 		<nav class="botoneraheader">
@@ -35,7 +35,7 @@
 	
 	<main class="flex-column">
 		
-		<img class="imgportada" src="img/portadasintaxis2.jpg" width="1080" height="400" alt="fotosintaxis"/>
+		<img class="imgportada" src="img/portadas/portadasintaxis2.jpg" width="1080" height="400" alt="fotosintaxis"/>
 		
 		<section class="flex-row">
 			
@@ -64,10 +64,12 @@
 					<h8>Excelente atención, volvería mil veces más. Riquisimo todo</h8>
 					<a class="botonverforo" target="_blank" href="foro.html">Ver foro</a>
 					<h6 class="contanos">Contanos que te pareció este lugar</h6>
+					
 					<form method="post" action="" target="_blank" enctype="text/plain">
 						<label for="Mensaje">Comentar</label>
 						<textarea name="Mensaje" id="Mensaje" maxlength="800"></textarea>
 					</form>
+						
 				</div>
 			</aside>
 		
@@ -154,7 +156,7 @@
 	
 	<footer>
 		<section>
-			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
+			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
