--- a/tartadelimon.html
+++ b/tartadelimon.html
@@ -14,7 +14,7 @@
 	<header>
 		
 		<section class="logobotonera">
-			<a href="graciasporunirte.html"><img src="img/logo a inicio 2.png" width="61" height="35" alt="logoheader"/></a>
+			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
 		<nav class="botoneraheader">
@@ -35,7 +35,7 @@
 	
 	<main class="flex-column">
 		
-		<img class="imgportada" src="img/portada tarta.jpg" width="1080" height="400" alt="portadatarta"/>
+		<img class="imgportada" src="img/portadas/portadatartalimon.jpg" width="1080" height="400" alt="portadatarta"/>
 
 		<section class="flex-row">
 			
@@ -82,19 +82,19 @@
 				<section class="flex-row gap">
 
 					<div class="datosrecetas">
-						<img src="img/reloj.svg"  width="40" height="40" alt="reloj"/>
+						<img src="img/iconosrecetas/reloj.png"  width="40" height="40" alt="reloj"/>
 						<h7>Tiempo:</h7>
 						<h8>1 hora</h8>
 					</div>
 
 					<div class="datosrecetas">
-						<img src="img/tilde.svg"  width="40" height="40" alt=""/>
+						<img src="img/iconosrecetas/tilde.png"  width="40" height="40" alt="tilde"/>
 						<h7>Dificultad:</h7>
 						<h8>media</h8>
 					</div>
 
 					<div class="datosrecetas">
-						<img src="img/cubiertos.png" width="40" height="40" alt=""/>
+						<img src="img/iconosrecetas/cubiertos.png" width="40" height="40" alt="cubiertos"/>
 						<h7>Porcion:</h7>
 						<h8>6-8 personas</h8>
 					</div>
@@ -197,7 +197,7 @@
 
 	<footer>
 		<section>
-			<img src="img/logo a inicio 2.png" width="61" height="36" alt="logo"/>
+			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
