--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		
 		<div class="botoneramobile">
 				<ul>
-					<li><a href="gracias por unirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a></li>
+					<li><a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a></li>
 					<li><img src="img/menu-hamburgues.svg" alt="menuhamburguesa"/></li>
 					<ul class="opciones2">
-						<li class="submenu2"><a href="gracias por unirte.html">Mi perfil</a></li>
+						<li class="submenu2"><a href="graciasporunirte.html">Mi perfil</a></li>
 						<li class="submenu2"><a href="restaurantes.html">Restaurantes</a></li>
 						<li class="submenu2"><a href="recetasdulces.html">Recetas Dulces</a></li>
 						<li class="submenu2"><a href="recetassaladas.html">Recetas Saladas</a></li>
@@ -93,7 +93,7 @@
 				<a href="recetas.html">
 				<div>
 					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="receta"/>
-					<h3 class="letrasnaranjas">Recetas</h3>
+					<h3 class="letrasblancas">Recetas</h3>
 				</div>
 				</a>
 			
