--- a/foro.html
+++ b/foro.html
@@ -17,7 +17,7 @@
 			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
-		<nav class="botoneraheader">
+		<nav class="botoneraheader solodesktop">
 			<ul>
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a>
@@ -30,6 +30,30 @@
 				<li><a href="graciasporunirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
+		
+		<div class="solomobile headermobile">
+
+			<a href="#menuhamburguesa"><p>mh</p><img src="img/menuhamburguesa-01.svg" alt=""/></a>
+
+			<nav id="menuhamburguesa" class="menuhamburguesa">
+				
+				<ul>
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
+					<ul class="opciones">
+						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
+					</ul>
+				</li>
+				<li><a href="foro.html">Foro</a></li>
+				<li><a href="graciasporunirte.html">Mi perfil</a></li>
+			</ul>
+
+				<a id="cerrarmenuhambubrguesa" href="#">&times;</a>
+				
+			</nav>
+
+		</div>
 		
 	</header>
 	
