--- a/sintaxispalermo.html
+++ b/sintaxispalermo.html
@@ -39,7 +39,7 @@
 		
 		<section class="flex-row">
 			
-			<section class="flex-row">
+			<section class="sectionrestaurante">
 				
 				<aside class="aside">
 				<div class="datos">
