--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			
 				<a href="recetas.html">
 				<div>
-					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="receta"/>
+					<img class="selecciondeimagenesnaranja" src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="receta"/>
 					<h3 class="letrasblancas">Recetas</h3>
 				</div>
 				</a>
