--- a/foro.html
+++ b/foro.html
@@ -33,18 +33,14 @@
 		
 		<div class="solomobile headermobile">
 
-			<a href="#menuhamburguesa"><p>mh</p><img src="img/menuhamburguesa-01.svg" alt=""/></a>
+			<a href="#menuhamburguesa"><img src="img/menuhamburguesapng-01.png" width="25" height="20" alt=""/></a>
 
 			<nav id="menuhamburguesa" class="menuhamburguesa">
 				
-				<ul>
+				<ul class="botonesmobile">
 				<li><a href="restaurantes.html">Restaurantes</a></li>
-				<li><a href="recetas.html">Recetas</a>
-					<ul class="opciones">
-						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
-						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
-					</ul>
-				</li>
+				<li class="submenu"><a href="recetasdulces.html">Recetas dulces</a></li>
+				<li class="submenu"><a href="recetassaladas.html">Recetas saladas</a></li>
 				<li><a href="foro.html">Foro</a></li>
 				<li><a href="graciasporunirte.html">Mi perfil</a></li>
 			</ul>
