--- a/tartadelimon.html
+++ b/tartadelimon.html
@@ -17,7 +17,7 @@
 			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
-		<nav class="botoneraheader">
+		<nav class="botoneraheader solodesktop">
 			<ul>
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a>
@@ -30,6 +30,30 @@
 				<li><a href="graciasporunirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
+		
+		<div class="solomobile headermobile">
+
+			<a href="#menuhamburguesa"><img src="img/menuhamburguesapng-01.png" width="25" height="20" alt=""/></a>
+
+			<nav id="menuhamburguesa" class="menuhamburguesa">
+				
+				<ul class="botonesmobile">
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
+					<ul class="opciones">
+						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
+					</ul>
+				</li>
+				<li><a href="foro.html">Foro</a></li>
+				<li><a href="graciasporunirte.html">Mi perfil</a></li>
+			</ul>
+
+				<a id="cerrarmenuhambubrguesa" href="#">&times;</a>
+				
+			</nav>
+
+		</div>
 		
 	</header>
 	
@@ -197,12 +221,12 @@
 
 	<footer>
 		<section>
-			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
+		<img class="responsiveoculto" src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
 		<section>
-			<h4>SEGUINOS EN </h4>
+			<h4 class="responsiveoculto">SEGUINOS EN </h4>
 			<div class="imgredes">
 				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
 				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
@@ -211,19 +235,19 @@
 		</section>
 		
 		<section>
-			<h4>SOBRE NOSOTROS</h4>
+			<h4 class="responsiveoculto">SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
-			<h5>Contacto</h5>
+			<h5 class="responsiveoculto">Contacto</h5>
 		</section>
 		
-		<section>
+		<section class="responsiveoculto">
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
 			<h5>Política de cookies</h5>
 		</section>
-
-</footer>
+		
+	</footer>
 
 </body>
 </html>
