--- a/graciasporunirte.html
+++ b/graciasporunirte.html
@@ -16,7 +16,7 @@
 			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
-		<nav class="botoneraheader">
+		<nav class="botoneraheader solodesktop">
 			<ul>
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a>
@@ -29,6 +29,30 @@
 				<li><a href="graciasporunirte.html">Mi perfil</a></li>
 			</ul>
 		</nav>
+		
+		<div class="solomobile headermobile">
+
+			<a href="#menuhamburguesa"><img src="img/menuhamburguesapng-01.png" width="25" height="20" alt=""/></a>
+
+			<nav id="menuhamburguesa" class="menuhamburguesa">
+				
+				<ul class="botonesmobile">
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
+					<ul class="opciones">
+						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
+					</ul>
+				</li>
+				<li><a href="foro.html">Foro</a></li>
+				<li><a href="graciasporunirte.html">Mi perfil</a></li>
+			</ul>
+
+				<a id="cerrarmenuhambubrguesa" href="#">&times;</a>
+				
+			</nav>
+
+		</div>
 		
 	</header>
 	
@@ -57,35 +81,18 @@
 			
 		</section>
 		
-		<section class="circulos flex-row">
-			
-				<a href="restaurantes.html">
-				<article>
-					<img class="selecciondeimagenes" src="img/portadascircularesgrandes/portadaresto.png" width="320" height="320" alt="restaurante"/>
-					<h3 class="letrasblancas">Restaurantes</h3>
-				</article>
-				</a>
-			
-				<a href="recetas.html">
-				<div>
-					<img src="img/portadascircularesgrandes/portadarecetas.svg" width="320" height="320" alt="imgreceta"/>
-					<h3 id="letrasnaranjas">Recetas</h3>
-				</div>
-				</a>
-			
-		</section>
+		
 		
 	</main>
 	
 	<footer>
-		
 		<section>
-			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
+		<img class="responsiveoculto" src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
 		<section>
-			<h4>SEGUINOS EN </h4>
+			<h4 class="responsiveoculto">SEGUINOS EN </h4>
 			<div class="imgredes">
 				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
 				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
@@ -94,12 +101,12 @@
 		</section>
 		
 		<section>
-			<h4>SOBRE NOSOTROS</h4>
+			<h4 class="responsiveoculto">SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
-			<h5>Contacto</h5>
+			<h5 class="responsiveoculto">Contacto</h5>
 		</section>
 		
-		<section>
+		<section class="responsiveoculto">
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
