--- a/recetasdulces.html
+++ b/recetasdulces.html
@@ -17,7 +17,7 @@
 			<a href="graciasporunirte.html"><img src="img/logoainicio2.png" width="61" height="35" alt="logoheader"/></a>
 		</section>
 		
-		<nav class="botoneraheader">
+		<nav class="botoneraheader solodesktop">
 			<ul>
 				<li><a href="restaurantes.html">Restaurantes</a></li>
 				<li><a href="recetas.html">Recetas</a>
@@ -31,12 +31,37 @@
 			</ul>
 		</nav>
 		
+		<div class="solomobile headermobile">
+
+			<a href="#menuhamburguesa"><img src="img/menuhamburguesapng-01.png" width="25" height="20" alt=""/></a>
+
+			<nav id="menuhamburguesa" class="menuhamburguesa">
+				
+				<ul class="botonesmobile">
+				<li><a href="restaurantes.html">Restaurantes</a></li>
+				<li><a href="recetas.html">Recetas</a>
+					<ul class="opciones">
+						<li class="submenu"><a href="recetasdulces.html">Dulces</a></li>
+						<li class="submenu"><a href="recetassaladas.html">Saladas</a></li>
+					</ul>
+				</li>
+				<li><a href="foro.html">Foro</a></li>
+				<li><a href="graciasporunirte.html">Mi perfil</a></li>
+			</ul>
+
+				<a id="cerrarmenuhambubrguesa" href="#">&times;</a>
+				
+			</nav>
+
+		</div>
+		
 	</header>
 	
 	<main class="maincards flex-column">
 	
 		<h3>Recetas dulces</h3>
-			
+		
+		<section class="contenedorcards">
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column"><a href="tartadelimon.html">
@@ -48,7 +73,8 @@
 				<img class="selecciondeimagenes" src="img/recetasdulces/brownies.svg"  width="200" height="200" alt="brownies"/>
 				<h6>Brownies</h6>
 			</div>
-			
+				</section>
+			<section class="flex-row sectioncards">
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/recetasdulces/budin.svg" width="200" height="200" alt="budin"/>
 				<h6>Budín</h6>
@@ -60,7 +86,9 @@
 			</div>
 			
 		</section>
+			</section>
 			
+		<section class="contenedorcards">
 		<section class="flex-row sectioncards">
 			
 			<div class="cards flex-column">
@@ -72,7 +100,8 @@
 				<img class="selecciondeimagenes" src="img/recetasdulces/pancakes.svg" width="200" height="200" alt="pancakes"/>
 				<h6>Pancakes</h6>
 			</div>
-			
+				</section>
+			<section class="flex-row sectioncards">
 			<div class="cards flex-column">
 				<img class="selecciondeimagenes" src="img/recetasdulces/alfajores.svg" width="200" height="200" alt="alfajor"/>
 				<h6>Alfajores</h6>	 
@@ -82,19 +111,19 @@
 				<img class="selecciondeimagenes" src="img/recetasdulces/tiramisu.svg" width="200" height="200" alt="tiramisu"/>
 				<h6>Tiramisú</h6>
 			</div>
-			
+				</section>
 		</section>
 		
 	</main>
 	
 	<footer>
 		<section>
-			<img src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
+		<img class="responsiveoculto" src="img/logoainicio2.png" width="61" height="36" alt="logo"/>
 			<h5> © Tacc Free 2022 | Todos los derechos reservados</h5>
 		</section>
 		
 		<section>
-			<h4>SEGUINOS EN </h4>
+			<h4 class="responsiveoculto">SEGUINOS EN </h4>
 			<div class="imgredes">
 				<a href="https://outlook.live.com/mail/0/"><img src="img/redesparafooter/mail.png" width="29" height="29" alt="iconomail"/></a>
 				<a href="https://es-la.facebook.com/" ><img src="img/redesparafooter/facebook.png" width="29" height="29" alt="iconofb"/></a>
@@ -103,12 +132,12 @@
 		</section>
 		
 		<section>
-			<h4>SOBRE NOSOTROS</h4>
+			<h4 class="responsiveoculto">SOBRE NOSOTROS</h4>
 			<h5>Preguntas frecuentes</h5>
-			<h5>Contacto</h5>
+			<h5 class="responsiveoculto">Contacto</h5>
 		</section>
 		
-		<section>
+		<section class="responsiveoculto">
 			<h4>INFORMACIÓN</h4>
 			<h5>Aviso legal</h5>
 			<h5>Política de privacidad</h5>
