video nuevo y portadas

--- a/tartadelimon.html
+++ b/tartadelimon.html
@@ -199,7 +199,7 @@
 			</div>
 					
 		</div>
-		<video src="video/tartadelimon.mp4" width="600" height="450" controls></video>
+		<video src="video/tartadelimon.mp4" poster="img/portadavideo/portada2.jpg" width="600" height="450" controls></video>
 	</article>
 			
 	</section>
