--- a/tartadelimon.html
+++ b/tartadelimon.html
@@ -59,7 +59,7 @@
 	
 	<main class="flex-column">
 		
-		<img class="imgportada" src="img/portadas/portadatarta.jpg" width="2560" height="949" alt=""/>
+		<img class="imgportada" src="img/portadas/portadatarta.jpg" width="2560" height="949" alt="tartadelimon"/>
 		
 		<section class="flex-row">
 			
