--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -13,7 +13,7 @@
 	<main class="ingresar">
 		
 		<section class="logo">
-			<img src="img/logo circulo blanco.png" width="420" height="420" alt="logo"/> 
+			<img src="img/logo" width="420" height="420" alt="logo"/> 
 		</section>
 		
 		<section class="Formulario-inicio">
