--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -1,39 +1,39 @@
 <!doctype html>
 <html>
+	
 <head>
+	
 	<meta charset="utf-8">
 	<title>Iniciar sesión</title>
 	<link href="estilos.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Inika&family=Open+Sans:wght@300;400;500&family=Original+Surfer&display=swap" rel="stylesheet">
 	<link rel="icon" href="img/favicon .ico">
+	
 </head>
 
 <body>
 	
 	<main class="ingresar">
 		
-		<section class="logo">
-			<img src="img/logo" width="420" height="420" alt="logo"/> 
-		</section>
+		<section class="logo"><img src="img/logo circulo blanco.png" width="417" height="417" alt="logo"/></section>
 		
 		<section class="Formulario-inicio">
+			
 			<form method="post" action="" target="_blank">
 				<label form="email">Email</label>
-				<input class="Controles registro" type="text" name="email" id="email" placeholder="Ingrese su Email">
+				<input class="Controles registro" type="text" name="email" id="email" placeholder="Ingrese su email">
 				<label form="contraseña">Contraseña</label>
-				<input class="Controles registro" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su Contraseña">
+				<input class="Controles registro" type="password" name="contraseña" id="contraseña" placeholder="Ingrese su contraseña">
 			</form>
 			
-			<div>
-				<input class="olvidastecontrasenia" type="submit" value="Olvidé mi contraseña">
-			</div>
+			<div><input class="olvidastecontrasenia" type="submit" value="Olvidé mi contraseña"></div>
 			
-			<div>
-				<a href="graciasporunirte.html"><input class="boton-iniciarsesion-registrarse" type="submit" value="Iniciar sesión"></a>
-			</div>
+			<div><a href="graciasporunirte.html"><input class="boton-iniciarsesion-registrarse" type="submit" value="Iniciar sesión"></a></div>
 			
 		</section>
+		
 	</main>
 	
 </body>
+	
 </html>
