--- a/graciasporunirte.html
+++ b/graciasporunirte.html
@@ -73,7 +73,7 @@
 					
 				<div class="sabes">
 					<h2 class="preguntainicio">¿Sabés lo que es la contaminación cruzada?</h2>
-					<p class="textosabesloquees">La celiaquía es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada. Es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensillos para cocinar o manipularlos, sin higienizarlos correctamente.</p>
+					<p class="textosabesloquees textoespacio">La celiaquía es una reacción inmunológica ante la ingesta de glúten, una proteína presente en el trigo, la cebada y el centeno. Y como sabemos lo difícil que es encontrar que comer, en este sitio vas a encontrar diferentes opciones, además de encontrar restaurantes que no tengan la posibilidad de una contaminación cruzada. Es decir que un alimento que no contenga gluten igual puede contaminarse por estar en contacto con otros alimentos que lo contengan o bien, por utilizar los mismos utensillos para cocinar o manipularlos, sin higienizarlos correctamente.</p>
 				</div>
 			
 			</section>
